<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/glav"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/wsr_icon"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/mob"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_po"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/po_logo"
            android:title="@string/nav_po" />
    </group>
</menu>